# AFIT-CSCE689-HW3-S

./: CMakeLists.txt
include/: PCalc_SP.h  PCalc_T.h
src/: PCalc_SP.cpp  PCalc_T.cpp
writeup/: HW3.tex
